--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "build": "node scripts/build.js"
   },
   "devDependencies": {
-    "esbuild": "^0.12.22"
+    "esbuild": "^0.12.22",
+    "slugify": "^1.6.5"
   }
 }
