--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "alpinejs-slug",
   "version": "1.0.1",
-  "description": "Transform a string to a slug 🐌",
+  "description": "Transform a string into a slug with Alpine JS and Slugify 🐌",
   "keywords": [
     "Alpine",
     "Alpine JS",
